# mapo-service-contracts

./: .gitignore  README.md  hardhat.config.js
contracts/: MAPOmnichainServiceRelayV3.sol  MessageFee.sol
contracts/interface/: IMOSV3.sol
contracts/utils/: NearDecoder.sol
deploy/: MessageFee.js
evm/: .env-example.txt  .env.example  README.md  hardhat.config.js  package-lock.json  package.json
evm/contracts/: FeeService.sol  MAPOmnichainServiceProxyV3.sol  MAPOmnichainServiceV3.sol  MapoServiceProxyV3.sol  MapoServiceRelayV3.sol  MapoServiceV3.sol
evm/deploy/: Echo.js  FeeService.js  MAPOmnichainServiceRelayV2Up.js  MAPOmnichainServiceV2Up.js  MapoServiceRelayV3Up.js  MapoServiceV3Up.js  Wrapped.js
evm/tasks/: addWhiteList.js  createMultipleSignature.js  customData.js  deployEcho.js  executeTimeLock.js  feeFactoryDeploy.js  getEcho.js  getGreeting.js  index.js  mosDeploy.js  mosDeployCreate3.js  mosFactoryDeploy.js  mosList.js  mosRegisterChain.js  mosSetClient.js  mosSetFeeService.js  mosSetMessageAddress.js  mosSetRelay.js  mosSetRelayCreate3.js  relayDeploy.js  relayDeployCreate3.js  relayFactoryDeploy.js  relayList.js  relayRegisterChain.js  relayRegisterChainCreate3.js  relaySetClientManager.js  (+8 more)
near/: Cargo.toml
near/map-ominichain-service/: Cargo.toml
near/map-ominichain-service/src/: errors.rs  event.rs  lib.rs  management.rs  traits.rs
near/map-ominichain-service/src/utils/: bytes.rs  evm.rs  mod.rs
tasks/: mosDeploy.js  mosRegisterChain.js  mosSetClient.js  mosSetMessageAddress.js  mosSetRelay.js  relayDeploy.js
test/: MosMessageTest.js
(+20 files in other folders)
