[package]
name = "mos"
version = "0.1.0"
edition = "2021"

[lib]
 crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
uint = { version = "0.8.3", default-features = false }
rlp = "0.5.1"
hex = "0.4.2"
ethabi = "12.0.0"
map-light-client = { git = "https://github.com/mapprotocol/map-contracts", rev = "67a1b0d8a5db97b5c25f1e09b40effcd79afe463"}
tiny-keccak = "1.4.0"
num-bigint = { version = "0.4", default-features = false }
num = { version = "0.3", default-features = false }
serde_json = "*"